03.composition/src/test/resources/de/monticore/gettingstarted/simplejava/valid/Bar.java
package de.monticore.gettingstarted.simplejava.valid;

class Bar {

  int max = 3
  int age = 1

  int getMax(){
    double d = 3.4
    double f = d + 1
    print()
  }

  int getAge(){
    boolean b = true
    b = false
  }

  void print(){

  }

}
